# ILLIP

./: .env.example  .gitignore  AGENTS.md  AUDIT_RESULTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  PROJECT_ROADMAP.md  README.md  START_HERE.md  VALIDATION_REPORT.md  check_system.ps1  docker-compose.yml  illip.bat  install.ps1  install.sh  pyproject.toml  railway.toml  render.yaml  requirements.txt  setup.bat  setup.ps1  start.bat  start.ps1
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: ci.yml
app/: __init__.py  auth.py  cli.py  config.py  dependencies.py  main.py  middleware.py  repl.py
app/agents/: __init__.py  base_agent.py  browser_task_agent.py  builder_agent.py  memory_agent.py  planner_agent.py  reflexion_agent.py  research_agent.py  reviewer_agent.py  specialist_agents.py  tester_agent.py
app/api/: __init__.py
app/connectors/: base_connector.py  discord_bot.py  email_connector.py  n8n_connector.py  registry.py  slack_bot.py  telegram_bot.py  webhook_connector.py  whatsapp_connector.py
app/core/: __init__.py  constants.py  exceptions.py  models.py  schemas.py
app/db/: __init__.py  sqlite.py
app/governance/: __init__.py  manager.py  policy.py
app/hardware/: __init__.py  context_manager.py  detector.py  ghost_engine.py  guard.py  safety_monitor.py  speculative.py  speed_optimizer.py
app/learning/: __init__.py  (+3 more)
data/: .gitignore
docs/: COMMANDS.md  UPDATING.md  api.md  architecture.md  continue_dev_config.json  folder_structure.md  integration_flow.md  portability.md  self_building_loop.md
frontend/: app.js  index.html  styles.css
scripts/: dev_start.ps1  illip.py  illip_cat.pyw  pick_model.py  repair.py  run_backend.ps1  run_frontend.ps1  setup.ps1  sharpen_bench.py  stop.py
tests/: __init__.py  conftest.py  test_agents.py  test_auth.py  test_chat.py  test_health.py  test_history_edit.py  test_idea_guardian.py  test_memory.py  test_middleware.py  test_model_catalog.py  test_new_features.py  test_readers_skills.py  test_router_tiers.py  test_self_heal.py  test_sharpener.py  test_tasks.py  test_telegram_auth.py  test_workspace.py
vscode-extension/: package.json
(+120 files in other folders)
