[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "illip-ai"
version = "3.1.0"
description = "Your AI company, in your device — local-first, private, portable"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai", "llm", "agents", "local", "private", "ollama", "claude"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.23",
    "httpx>=0.28.0",
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
full = [
    "qdrant-client>=1.9.0",
    "anthropic>=0.40.0",
    "pypdf>=3.17.1",
    "ddgs>=9.0.0",
    "trafilatura>=1.8.0",
    "playwright>=1.44.0",
    "faster-whisper>=1.0.0",
    "gtts>=2.5.0",
    "python-telegram-bot>=20.0",
    "discord.py>=2.3.0",
    "slack_sdk>=3.26.0",
    "aiosmtplib>=3.0.0",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "httpx>=0.28.0",
]

[project.scripts]
illip = "app.cli:main"

[project.urls]
Homepage = "https://github.com/illip-ai/illip"
Documentation = "https://github.com/illip-ai/illip#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "frontend*"]

[tool.setuptools.package-data]
"app" = ["prompts/*.md"]
"frontend" = ["*.html", "*.js", "*.css"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
